v2 changes * WPS Identifier removed * MeasureJobFactory now caches WpsProcessEntity instances instead of querying the database at every create call * MonitorControl Facade extended and adjusted (endpoint selection instead of wpsIdentifier, selection by wpsId also possible) * getWpsId(URL) and getWpsProcessId(URL, String) methods added to the monitorcontrol facade to fetch the internal database IDs * DataAccess API extended and adjusted (selection by wpsId, endpoint selection instead of wpsIdentifier) * wpsUri renamed to endpoint * endpoint (previously wpsUri) now saved as String (VARCHAR in the database). This makes it easier to handle URLs in the database. The WpsEntity class encapsulate the String field as URL by getter and setter methods. This changes limit the URL length to 255 characters. I have tried to save the endpoints as URL and URI, but this makes selections impossible, because JPA can't compare CLOB in JPQL statements * Display parameter removed from ListMeasurementRoute; metrics are always shown * ListWpsProcessesRoute added. /measurement/wps/:id now shows the processes of the WPS entry * Monitor GUI adjusted * GUI tests removed (in fact the gui should be replaced in the future and the tests are not working on every machine ..) * RESTful Interface display option removed.  Metrics are now always shown